--- a/Raiden.qsf
+++ b/Raiden.qsf
@@ -108,4 +108,5 @@ set_location_assignment PIN_AB18 -to keyOut[4]
 set_location_assignment PIN_AA17 -to keyOut[5]
 set_location_assignment PIN_U22 -to keyOut[6]
 set_global_assignment -name VERILOG_FILE Enemy.v
+set_global_assignment -name VERILOG_FILE Random.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
