--- a/Raiden.qsf
+++ b/Raiden.qsf
@@ -93,20 +93,28 @@ set_location_assignment PIN_G12 -to keypadCol[2]
 set_location_assignment PIN_K16 -to keypadCol[3]
 set_global_assignment -name VERILOG_FILE Keypad.v
 set_global_assignment -name VERILOG_FILE SevenSegment.v
-set_location_assignment PIN_U21 -to segOut[0]
-set_location_assignment PIN_V21 -to segOut[1]
-set_location_assignment PIN_W22 -to segOut[2]
-set_location_assignment PIN_W21 -to segOut[3]
-set_location_assignment PIN_Y22 -to segOut[4]
-set_location_assignment PIN_Y21 -to segOut[5]
-set_location_assignment PIN_AA22 -to segOut[6]
-set_location_assignment PIN_AA20 -to keyOut[0]
-set_location_assignment PIN_AB20 -to keyOut[1]
-set_location_assignment PIN_AA19 -to keyOut[2]
-set_location_assignment PIN_AA18 -to keyOut[3]
-set_location_assignment PIN_AB18 -to keyOut[4]
-set_location_assignment PIN_AA17 -to keyOut[5]
-set_location_assignment PIN_U22 -to keyOut[6]
+set_location_assignment PIN_N9 -to keyOut[0]
+set_location_assignment PIN_M8 -to keyOut[1]
+set_location_assignment PIN_T14 -to keyOut[2]
+set_location_assignment PIN_P14 -to keyOut[3]
+set_location_assignment PIN_C1 -to keyOut[4]
+set_location_assignment PIN_C2 -to keyOut[5]
+set_location_assignment PIN_W19 -to keyOut[6]
 set_global_assignment -name VERILOG_FILE Enemy.v
 set_global_assignment -name VERILOG_FILE Random.v
+set_global_assignment -name VERILOG_FILE Score.v
+set_location_assignment PIN_U21 -to segUn[0]
+set_location_assignment PIN_V21 -to segUn[1]
+set_location_assignment PIN_W22 -to segUn[2]
+set_location_assignment PIN_W21 -to segUn[3]
+set_location_assignment PIN_Y22 -to segUn[4]
+set_location_assignment PIN_Y21 -to segUn[5]
+set_location_assignment PIN_AA22 -to segUn[6]
+set_location_assignment PIN_AA20 -to segDec[0]
+set_location_assignment PIN_AB20 -to segDec[1]
+set_location_assignment PIN_AA19 -to segDec[2]
+set_location_assignment PIN_AA18 -to segDec[3]
+set_location_assignment PIN_AB18 -to segDec[4]
+set_location_assignment PIN_AA17 -to segDec[5]
+set_location_assignment PIN_U22 -to segDec[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
